# Memory

./: .gitmodules  DirectMemoryAsArrayMemoryAdapter.cs  FileArrayMemory.cs  FileMappedResizableDirectMemory.cs  HeapResizableDirectMemory.cs  IMemory.cs  IResizableDirectMemory.cs  Platform.Memory.csproj  Platform.Memory.sln  README.html  README.md  ResizableDirectMemoryBase.cs  TemporaryFileMappedResizableDirectMemory.cs  index.html  index.json  manifest.json  push-nuget.sh  toc.html  xrefmap.yml
Platform.Memory/: ArrayMemory.cs  DirectMemoryAsArrayMemoryAdapter.cs  FileArrayMemory.cs  FileMappedResizableDirectMemory.cs  HeapResizableDirectMemory.cs  IArrayMemory.cs  IDirectMemory.cs  IResizableDirectMemory.cs  Platform.Memory.csproj  ResizableDirectMemoryBase.cs  TemporaryFileMappedResizableDirectMemory.cs
Platform.Memory.Tests/: HeapResizableDirectMemoryTests.cs  Platform.Memory.Tests.csproj
api/: Platform.Memory.ArrayMemory-1.html  Platform.Memory.DirectMemoryAsArrayMemoryAdapter-1.html  Platform.Memory.FileArrayMemory-1.html  Platform.Memory.FileMappedResizableDirectMemory.html  Platform.Memory.HeapResizableDirectMemory.html  Platform.Memory.IArrayMemory-1.html  Platform.Memory.IDirectMemory.html  Platform.Memory.IMemory.html  Platform.Memory.html  (+6 more)
rust/: Cargo.toml
rust/src/: alloc.rs  alloc_mem.rs  base.rs  file_mapped.rs  file_mapped_mem.rs  global.rs  global_mem.rs  internal.rs  lib.rs  mem_traits.rs  prealloc.rs  temp_file.rs  temp_file_mem.rs  traits.rs
rust/tests/: alloc.rs  basic.rs  file_mapped.rs  global.rs  internal.rs  prealloc.rs  shrink_drop.rs
(+52 files in other folders)
