[package]
name = "platform-mem"
version = "0.1.0-pre+beta.2"
edition = "2021"
authors = ["uselesssgoddess", "Linksplatform Team <linksplatformtechnologies@gmail.com>"]
license = "LGPL-3.0"
repository = "https://github.com/linksplatform/platform-rs"
homepage = "https://github.com/linksplatform/platform-rs"
description = """
Memory for linksplatform
"""

[dependencies]
memmap2 = "0.5"
tempfile = "3.3"
thiserror = "1.0"

platform-num = { version = "0.1.0-aplha.0" }
